syntax = "proto3";

// Пространство имен
option csharp_namespace = "CardsServer.BLL";

// Название проекта
package dataAnalytic;


service DataAnalytic {
    rpc GetAnalytics (AnalyticsRequest) returns (AnalyticsResponse);
}

message AnalyticsRequest {
    int32 id = 1;
}

message AnalyticsResponse {
    string result = 1;
    string details = 2;
}
